--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,13 +18,15 @@ li{
   display:flex;
   border-bottom: 1px solid seashell;
   justify-content: space-between;
+  align-content: center;
+  flex-wrap:wrap;
   height: 69px;
+  width: 100%;
   top: 0;
   right: 0;
   align-items: center;
   position: fixed;
   z-index: 5;
-  width: 100%
 }
 ul{
   display:flex;
@@ -48,7 +50,6 @@ width:1200px;
 height:700px;
 justify-content: center;
 margin:0 auto;
-
 top:69px;
 }
 .missiontext{
@@ -76,23 +77,29 @@ top:69px;
 .teatop{
   display:flex;
   justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
 }
+
 .teatop1,
 .teatop2,
 .teatop3{
   margin-right: 10px;
   margin-left: 10px;
 }
+
 .teabottom{
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
 }
+
 .teabottom1,
 .teabottom2{
   margin-left: 10px;
   margin-right: 10px;
 }
-
 /*body - location */
 .location{
   background-image: url(../images/img-locations-background.jpg);
@@ -106,29 +113,32 @@ top:69px;
   flex-direction: column;
   justify-content: center;
 }
+
 .locationbox{
   display: flex;
   justify-content: space-between;
-  width: 980px;
+  width:980px;
   background-color: transparent;
+
 }
+
 .locationtext{
   margin-bottom: 15px;
   background-color: transparent;
 }
+
 .location1,
 .location2,
 .location3{
   width: 300px;
   opacity: 1;
 }
+
 .location1 h3,
 .location2 h3,
 .location3 h3{
   font-size: 25.74px;
 }
-
-
 
 .locationtext h2{
   background-color: transparent;
